# VoxelExperiment

./: .rustfmt.toml  Cargo.toml  README.md  clippy.toml  server_config.toml
.cargo/: config.toml
assets/blocks/: dirt.toml  grass.toml  stone.toml
assets/shaders/: debug.wgsl  terrain.wgsl  terrain.wgsl.bak
client/: Cargo.toml
client/src/: camera.rs  lib.rs  main.rs  png_utils.rs  scene.rs  window.rs
client/src/renderer/: buffer.rs  mod.rs  texture.rs  texture_packer.rs
client/src/renderer/pipelines/: mod.rs  terrain.rs
common/: Cargo.toml
common/src/: block.rs  chunk.rs  clock.rs  components.rs  dir.rs  event.rs  events.rs  lib.rs  resources.rs  state.rs
common/src/net/: connection.rs  error.rs  mod.rs  packet.rs
core/: Cargo.toml
core/src/: block.rs  chunk.rs  lib.rs  resources.rs  state.rs  uid.rs
core/src/net/: con.rs  connection.rs  mod.rs  packet.rs  socket.rs
explora/: Cargo.toml
explora/src/: block.rs  camera.rs  debug.rs  error.rs  event.rs  input.rs  lib.rs  main.rs  mesh.rs  ray.rs  run.rs  scene.rs  settings.rs  singleplayer.rs  terrain.rs  window.rs
explora/src/client/: error.rs  mod.rs
explora/src/mesh/: chunk.rs  debug.rs  mod.rs
explora/src/render/: atlas.rs  bindings.rs  buffer.rs  mod.rs  pipeline.rs  resources.rs  texture.rs  ui.rs  vertex.rs
explora/src/render/mesh/: debug.rs  mod.rs
explora/src/render/pipelines/: debug.rs  mod.rs  terrain.rs
explora/src/ui/: mod.rs
render/: Cargo.toml
render/src/: atlas.rs  bindings.rs  error.rs  lib.rs  mesh.rs  pipeline.rs  resources.rs  texture.rs  ui.rs  vertex.rs
render/src/server/src/: lib.rs
server/: Cargo.toml
server-cli/: Cargo.toml
server-cli/src/: main.rs
server/src/: config.rs  events.rs  lib.rs  world.rs
