[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing.workspace = true
common = { path = "../common" }
winit = "0.29.10"
pollster = "0.3.0"
wgpu = "0.19.1"
bytemuck = { version = "1.14.0", features = ["derive"] }
png = "0.17.11"
