[package]
name = "explora_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apecs = { workspace = true }
log = { workspace = true }
rand = "0.8.5"
vek = { workspace = true }
noise = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
lz4-compress = "0.1.1"
bytes = "1.5.0"
rayon = "1.8.0"
