[package]
name = "explora_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
pollster = "0.3.0"
wgpu = "0.17.1"
winit = "0.28.7"
common = { path = "../common", package = "explora_common"}
bytemuck = "1.14.0"
