[package]
name = "explora_render"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
pollster = "0.3.0"
wgpu = "0.18.0" 
winit = { version = "0.29.3", features = ["rwh_05"]}
bytemuck = { version = "1.14.0", features = ["derive"] }
vek = { workspace = true }
image = "0.24.7"
# UI
egui = "0.23.0"
egui-winit = "0.23.0"
egui-wgpu = "0.23.0"
apecs = { workspace = true}