[package]
name = "explora_server_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server", package = "explora_server" }
core = { path = "../core", package = "explora_core" }
log = { workspace = true }
env_logger = "0.10.0"
