[package]
name = "explora_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
common = { path = "../common", package = "explora_common" }
apecs = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
noise = { workspace = true }
vek = {workspace = true }
rayon = "1.8.0"
